# DriverDrowsinessDetector

./: .gitignore  CAMERA_REAL_GUIDE.md  CMakeLists.txt  CMakeLists_qt_only.txt  CMakeLists_statusbar.txt  COPILOT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  FEATURE_VERIFICATION.md  FINAL_STATUS.md  GITHUB_SETUP_INSTRUCTIONS.md  LICENSE  README.md  VCPKG_SETUP.md  build-with-vcpkg.ps1  main.cpp
build-opencv/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
src/: camera_capture.cpp  camera_capture.h  detector.cpp  detector.h  detector_mock.h  drowsiness_analyzer.cpp  drowsiness_analyzer.h  face_analyzer.cpp  face_analyzer.h  oculox_window.cpp  oculox_window.h  utils.h  utils_mock.h
